# baseball-sim

./: README.md
collection/: main.py
collection/helpers/: data_collectors.py  save_functions.py
collection/test/: db_read.py  inspect_db.py  manual_collection.py
data/: batters.db  pitchers.db
sim/: CMakeLists.txt  main.cpp
sim/scripts/: get_data.cpp  get_data.h  pitch_select.cpp  pitch_select.h
